--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,13 @@ body{
 }
 .main {
   height: 55vh;
-  background: #2a6bb1;
+  background: dodgerblue;
   box-shadow: 0px 2px 80px -20px rgba(0,0,0,0.5);
   width: 60%;
   margin: 0 auto;
 }
 .info {
-  height: 55vh;
-  background: url("img/aa.jpg") center center no-repeat;
+  background: url("img/аа.jpg") center center no-repeat;
   background-blend-mode: multiply;
   background-color: #484747;
   border: 2px solid #1f1f1f;
@@ -42,48 +41,48 @@ body{
 
 .form {
   height: 55vh;
-  padding-top: 100px;
+  padding-top: 55px;
   padding-left: 50px;
-  border-top: 2px solid #113a65;
-  border-bottom: 2px solid #113a65;
-  border-right: 2px solid #113a65;
+  border-top: 2px solid #245288;
+  border-bottom: 2px solid #245288;
+  border-right: 2px solid #245288;
 }
 input[type="text"] {
   background-color: transparent;
   border: 0;
-  border-bottom: solid 2px #113a65!important;
+  border-bottom: solid 2px #245288!important;
   width: 50%;
-  padding-bottom: 4px;
+  padding-bottom: 2px;
   color: #fff!important;
   font-weight: lighter;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   margin-right: 20px;
   font-size: 20px;
   outline: none;
 }
 
 input::-webkit-input-placeholder {
-  color: #103a65!important;
+  color: #245288!important;
 }
 
 input::-moz-placeholder {
-  color: #103a65;
+  color: #245288;
 }
 
 button {
-  border: 2px solid #103a65;
-  border-bottom: 4px solid #103a65;
-  padding: 8px 20px;
-  margin: 0 2px;
+  border: 2px solid #245288;
+  border-bottom: 2px solid #245288;
+  padding: 2px 15px;
+  margin: 0 1px;
   border-radius: 2px;
   cursor: pointer;
-  background-color: #235d9c;
+  background-color: dodgerblue;
   color: #fff;
   outline: none!important;
 }
 
 button:hover {
-  border-bottom: 2px solid #103a65;
+  border-bottom: 2px solid #245288;
   position: relative;
   top: 2px;
 }
@@ -106,12 +105,13 @@ button:active {
 }
 
 .infoWeath {
-  width: 60%;
-  font-size: 20px;
+  position: relative;
   color: #fff;
+  flex-direction: column;
+  display: flex;
 }
 
 .error {
-  color: #041f3c;
+  color: #245288;
   font-weight: bold;
 }
